--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
            </div>
         </div>
 
+
+
         <div class="container-1">
             <h1 class="container-1--title">Where to?</h1>
 
@@ -70,23 +72,28 @@
                 <button class="container-1__searchbar__button">Search</button>
             </div>
 
+            <div class="container-1__img--img">
+
+                <div class="container-1__img">
+                    <img src="./Images/01.jpg">
+                </div>
+                
+                <div class="container-1__img--dis">    
+                    <h1>World's best hotels for 2024</h1>
+                    <h3>See our Travelers' Choice Awards Best of the Best winners.</h3>
+
+                    <button>See the list</button>
+                </div>
+            </div>   
+
         </div>
 
-        <div class="container-2">
-
-            <div class="container-2__img">
-                <img src="./Images/01.jpg">
-            </div>
-            <div>    
-                <h1>World's best hotels for 2024</h1>
-                <h3>See our Travelers' Choice Awards Best of the Best winners.</h3>
-            </div>    
-
-            <div>
-                <button>See the list</button>
-            </div>
-            
         </div>
+
+
+
+
+
 
     </body>
 </html>
