--- a/index.html
+++ b/index.html
@@ -149,10 +149,15 @@
 
     
         <div class="container-4">
-            <div>
+            <div class="container-4__des">
                 <img src="./Images/11.jpg">
-                <h2>Discover India</h2>
-                <h3>Find out why travelers like you are raving about India</h3>
+
+                <div class="container-4__des__para">
+                    <h2>Discover India</h2>
+                    <h3>Find out why travelers like you are raving about India</h3>
+                </div>
+
+                <button>Explore Now</button>
             </div>
         </div>
 
