Add some contants

--- a/index.html
+++ b/index.html
@@ -162,6 +162,28 @@
         </div>
 
 
+        <div class="container-5">
+
+                <div class="container-5__head">
+                    <h2>More to explore</h2>
+                </div>
+                
+                <div class="container-5__img">
+                    <div class="container-5__img--images">
+                        <img src="./Images/12.jpg">
+                        <p>20 summer vacation ideas across the SriLanka</p>
+                    </div>
+                    <div class="container-5__img--images">
+                        <img src="./Images/13.jpg">
+                        <p>10 perfect days in Greece</p>
+                    </div>
+                    <div class="container-5__img--images">
+                        <img src="./Images/14.jpg">
+                        <p>How to explore Boston with kids</p>
+                    </div>
+                </div>
+        </div>
+
 
 
 
