--- a/index.html
+++ b/index.html
@@ -184,7 +184,126 @@
                 </div>
         </div>
 
+        <div class="container-6">
 
+            <h2 class="container-6__title">Trending in Travel</h2>
+
+            <div class="container-6__dis">
+                <h3>Spring Destinations</h3>
+                <h3>2024 Summer Olympics</h3>
+            </div>
+            <div class="container-6__coun">
+
+                <table>
+                    <tr>
+                        <td>Nashville </td>
+                        <td>Rome</td> 
+                        <td>Costa Rica</td>
+                        <td>Tokyo</td>
+                    </tr>
+                    <tr>
+                        <td>Charleston</td>
+                        <td>Prague</td> 
+                        <td>Maui</td>
+                        <td>Madrid</td>
+                    </tr>
+                    <tr>
+                        <td>Sedona</td>
+                        <td>Santorini</td> 
+                        <td>Belize</td>
+                        <td>Bermuda</td>
+                    </tr>
+                    <tr>
+                        <td>New Orleans</td>
+                        <td>Budapest</td> 
+                        <td>Puerto Vallarta</td>
+                        <td>Maldives</td>
+                    </tr>
+                    <tr>
+                        <td>Washington DC</td>
+                        <td>Copenhagen</td> 
+                        <td>Cabo San Lucas</td>
+                        <td>Mexico City</td>
+                    </tr>
+                </table>
+
+            </div>
+
+        </div>
+
+
+        <div class="container-7">
+
+            <div class="container-7__dis">
+            <div class="container-7__dis-left">
+
+                <table>
+                    <tr>
+                        <th>About Tripadvisor</th>
+                        <th>Explore</th>
+                        <th>Do Business With Us</th>
+                    </tr>
+                    <tr>
+                        <td>About Us</td>
+                        <td>Write a review</td>
+                        <td>Owners</td>
+                    </tr>
+                    <tr>
+                        <td>Press</td>
+                        <td>Add a Place</td>
+                        <td>Business Advantage</td>
+                    </tr>
+                    <tr>
+                        <td>Resources and Policies</td>
+                        <td>Join</td>
+                        <td>Sponsored Placements</td>
+                    </tr>
+                    <tr>
+                        <td>Careers</td>
+                        <td>Travelers' Choice</td>
+                        <td>Advertise with Us</td>
+                    </tr>
+                    <tr>
+                        <td>Investor Relations</td>
+                        <td>GreenLeaders</td>
+                        <td>Access our Content API</td>
+                    </tr>
+                    <tr>
+                        <td>Trust & Safety</td>
+                        <td>Blog</td>
+                        <td>Become an Affiliate</td>
+                    </tr>
+                    <tr>
+                        <td>Contact us</td>
+                        <td>Help Center</td>
+                        <td rowspan="2">Get the App</td>
+                        
+                    </tr>
+                    <tr>
+                        <td>Accessibility Statement</td>
+                        <td>Travel Articles</td>
+                    </tr>
+                </table>
+
+
+            </div>
+            <div class="container-7__dis-right">
+                <h4>Tripadvisor Sites</h4>
+                <p>
+                    Discover your dream destination with Jetsetter <br>
+                    Book the best restaurants with TheFork <br>
+                    Book tours and attraction tickets on Viator <br>
+                    Read cruise reviews on Cruise Critic <br>
+                    Get airline seating charts on Seat Guru <br>
+                    Find vacation rentals on FlipKey <br>
+                    Search for holiday rentals on Holiday Lettings <br>
+                    Plan and book your next trip with Reco Trip Designers <br>
+                </p>
+
+            </div>
+            </div>
+
+        </div>
 
 
     </body>
