All contents updated

--- a/index.html
+++ b/index.html
@@ -64,12 +64,14 @@
                  
             </div>
 
-            <div class="container-1__searchbar">
-                <div class="container-1__searchbar__search">
-                    <img src="./Icons/search-interface-symbol.png">
-                    <h3>Places to go, things to do, hotels...</h3>
+            <div class="container-1__search">
+                <div class="container-1__searchbar">
+                    <div class="container-1__searchbar__search">
+                        <img src="./Icons/search-interface-symbol.png">
+                        <h3>Places to go, things to do, hotels...</h3>
+                    </div>
+                    <button class="container-1__searchbar__button">Search</button>
                 </div>
-                <button class="container-1__searchbar__button">Search</button>
             </div>
 
             <div class="container-1__img--img">
@@ -301,6 +303,24 @@
                 </p>
 
             </div>
+            </div>
+
+            <div class="container-7__footer">
+
+                <div class="container-7__footer--left">
+                    <img src="./Images/logo.png" alt="logo">
+
+                    <div class="container-7__footer--left--links">
+                            <p>&copy;2024 Tripadvisor LLC All rights reserved.</p>
+                    </div>
+                </div>  
+                
+                <div class="container-7__footer--right">
+                    <div class="container-7__footer--right--buttons">
+                        <button>$ USD</button>
+                        <button>United States</button>
+                    </div>
+                </div>
             </div>
 
         </div>
