Responsive Web Design

--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
             <h3>More</h3>
            </div>
 
+           <div class="header__mid--2">
+            <h3>Hotels</h3>
+            <h3>Things to Do</h3>
+            <h3>Restaurants</h3>
+            <h3>Flights</h3>
+            <h3>Vacation Rentals</h3>
+            <h3>Cruises</h3>
+            <h3>Rental Cars</h3>
+            <h3>Forums</h3>
+           </div>
+
            <div class="header__right">
             <div class="header__right__1">
                 <i class="fa-solid fa-globe" style="color: #000000;"></i>
@@ -286,6 +297,12 @@
                         <td>Travel Articles</td>
                     </tr>
                 </table>
+
+                <div class="container-7__dis-left--2"> 
+                    <h4>+ About Tripadvisor<h4>
+                    <h4>+ Explore</h4>
+                    <h4>+ Do Business With Us</h4>
+                </div>
 
 
             </div>
